#working on onion graphics

--- a/src/directives/content/content.dir.html
+++ b/src/directives/content/content.dir.html
@@ -1,5 +1,16 @@
 <div class="content">
-    <!--<div> Content !  {{getFrame()}} </div> -->
+    <div> Content !  {{model.frame}} </div>
 
-    <img class="image">
+    <canvas>
+        No Canvas Support
+    </canvas>
+
+    <!-- <img class="image" ng-src="{{model.frame}}">
+
+    <img ng-repeat="onion in model.onions track by $index" 
+        ng-src="{{onion}}" 
+        ng-style="getOnionStyle($index)"
+        class="onion"> -->
+
+
 </div>
